overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ body {
   display: grid;
   justify-items: center;
   align-items: center;
-  background-color: var(--color-app-background);
+  background-color: white;
+  overflow-x: hidden;
 }
 .top-shape {
   position: absolute;
@@ -128,6 +129,7 @@ body {
 
 .iphone__shape-header img {
   width: 25px;
+  height: 25px;
   object-fit: contain;
   border: 1px solid white;
   border-radius: 50%;
@@ -299,9 +301,7 @@ body {
   }
 }
 @media screen and (max-width: 550px) {
-  body {
-    overflow-x: hidden;
-  }
+ 
   .container {
     flex-direction: column;
     justify-content: center;
